--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install SQLX
-      run: cargo install sqlx
+      run: cargo install sqlx-cli
     - name: Prep
       run: cargo sqlx prepare
     - name: Build
