--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,25 +2,28 @@ name: Alchemist Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Install SQLX
-      run: cargo install sqlx-cli
-    - name: Prep
-      run: cargo sqlx prepare
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v4
+      - name: Create .env file
+        run: |
+          touch .env
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+      - name: Install SQLX
+        run: cargo install sqlx-cli
+      - name: Prep
+        run: cargo sqlx prepare
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
