--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           touch .env
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+          cat .env
       - name: Install SQLX
         run: cargo install sqlx-cli
       - name: Prep
