--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,5 +1,8 @@
 name: Alchemist Build
 
+env:
+  DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
 on:
   push:
     branches: ["main"]
@@ -15,7 +18,7 @@ jobs:
       - name: Create .env file
         run: |
           touch .env
-          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+          echo "DATABASE_URL=env.DATABASE_URL >> .env
           cat .env
       - name: Install SQLX
         run: cargo install sqlx-cli
