--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Create .env file
         run: |       
+          if [ -z "${{ secrets.DATABASE_URL }}" ]; then
+            echo "DATABASE_URL is not set. Please check your repository secrets."
+            exit 1
+          fi
           touch .env
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
           cat .env
